fix titles gaps and margins

--- a/wp-content/themes/Yara/assets/scss/templates/landingPage/_landingPageMobile.scss
+++ b/wp-content/themes/Yara/assets/scss/templates/landingPage/_landingPageMobile.scss
@@ -21,7 +21,7 @@
             }
             h3{
                 margin: 0 0 40px 0px;
-                margin-top: 15px !important;
+                margin-top: 80px !important;
                 margin-bottom: calc(var(--sectionSpacer) / 2) !important;
                 font-size: 24px;
                 font-style: normal;
